--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.54.1",
     "react-intersection-observer": "^9.14.0",
     "react-router-dom": "^7.0.2",
+    "rollup-plugin-visualizer": "^5.13.1",
     "tailwind-merge": "^2.5.5",
     "zod": "^3.24.1"
   },
